# sauran-a

./: README.md
task-6-report-of-monaco/: LICENSE  README.md  setup.cfg
task-6-report-of-monaco/src/report_monaco/: report_monaco.py
task-6-report-of-monaco/src/report_monaco_sauran.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
task-6-report-of-monaco/tests/: test_report.py
