[metadata]
name = report_monaco_sauran
version = 0.0.5
author = sauran.akhm
author_email = sauran@me.com
description = Monaco 2018 Race reporting app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sauran-a
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src